--- a/src/main.css
+++ b/src/main.css
@@ -1,23 +1,3 @@
-/* Coolors for the haeder bar */
-/* .MuiAppBar-colorPrimary-18 {
-  color: snow !important;
-  background-color: lightblue !important;
-} */
-
-/* Override the font and size from material UI */
-/* .MuiTypography-h6-86 {
-  font-size: 1.9em !important;
-  font-family: cursive !important;
-} */
-
-/* Nav bar removing white space and making it stay on scroll */
-/* .MuiAppBar-positionStatic-15 {
-  position: fixed !important;
-  top: 0;
-  overflow: hidden;
-  left: 0;
-} */
-
 /* 3D image */
 .cool3D {
   width: auto;
@@ -86,4 +66,15 @@
   margin-left: auto;
   margin-right: auto;
   width: 80%;
+}
+
+.aboutSection {
+  display: -webkit-box;
+  padding-bottom: 50px;
+}
+
+.header {
+  text-align: center;
+  background: lightblue;
+  padding: 20px;
 }
